force-app/main/default/objects/Accounting_Process__c/fields/Payroll_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Notes__c</fullName>
    <label>Payroll Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>