force-app/main/default/objects/Accounting_Process__c/fields/Payroll_Set_up_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Set_up_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Set-up Email Sent</label>
    <type>Checkbox</type>
</CustomField>