force-app/main/default/objects/Accounting_Process__c/fields/Payroll_Status__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Status__c</fullName>
    <label>Payroll Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Set-up</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active - On Hold</fullName>
            </value>
            <value>
                <fullName>Suspended / Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>