force-app/main/default/objects/Accounting_Process__c/fields/Payroll_Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Subscription_Status__c</fullName>
    <formula>Account__r.Payroll_Subscription_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Subscription Status</label>
    <type>Text</type>
</CustomField>