force-app/main/default/objects/Accounting_Process__c/fields/Personal__c.field-meta.xml
<CustomField>
    <fullName>Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal</label>
    <type>Checkbox</type>
</CustomField>