force-app/main/default/objects/Accounting_Process__c/fields/Personal_email_template__c.field-meta.xml
<CustomField>
    <fullName>Personal_email_template__c</fullName>
    <label>Personal (email template)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>