force-app/main/default/objects/Accounting_Process__c/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <label>Portal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Manager Review</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>E-File</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>