force-app/main/default/objects/Accounting_Process__c/fields/Portal_User_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Assigned__c</fullName>
    <description>The text string of the user&apos;s name assigned this Accounting Process in the Portal</description>
    <label>Portal User Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>