force-app/main/default/objects/Accounting_Process__c/fields/Prep_review_new__c.field-meta.xml
<CustomField>
    <fullName>Prep_review_new__c</fullName>
    <formula>ROUND( 9 * (
   ( 5 * FLOOR( ( DATEVALUE( Sent_to_Review__c) - DATE( 1900, 01, 08) ) / 7) +
    MIN(5,
     MOD( DATEVALUE( Sent_to_Review__c) - DATE( 1900, 01, 08), 7) +
     MIN( 1, 24 / 9 * ( MOD( Sent_to_Review__c- DATETIMEVALUE( &apos;1900-01-08 14:30:00&apos; ), 1 ) ) )
    )
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Sent_to_Preparation__c ) - DATE( 1900, 01, 08) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE(Sent_to_Preparation__c ) - DATE( 1996, 01, 08), 7 ) +
      MIN( 1, 24 / 9 * ( MOD( Sent_to_Preparation__c-DATETIMEVALUE( &apos;1900-01-08 14:30:00&apos; ), 1) ) )
    )
   )
  ),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prep - review (new)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>