force-app/main/default/objects/Accounting_Process__c/fields/Preparation_Additional_Info_Requested__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Additional_Info_Requested__c</fullName>
    <formula>((Sent_to_Additional_Info_Request_Sent__c-Sent_to_Preparation__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preparation - Additional Info Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>