force-app/main/default/objects/Accounting_Process__c/fields/Preparation_Review__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Review__c</fullName>
    <formula>((Sent_to_Review__c- Sent_to_Preparation__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preparation - Review</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>