force-app/main/default/objects/Accounting_Process__c/fields/Preparation_sent_by__c.field-meta.xml
<CustomField>
    <fullName>Preparation_sent_by__c</fullName>
    <label>Preparation sent by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>