force-app/main/default/objects/Accounting_Process__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>