force-app/main/default/objects/Accounting_Process__c/fields/Prior_Year_Tax_Return_completed_by_us__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Tax_Return_completed_by_us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Year Tax Return completed by us</label>
    <type>Checkbox</type>
</CustomField>