force-app/main/default/objects/Accounting_Process__c/fields/Q2_State__c.field-meta.xml
<CustomField>
    <fullName>Q2_State__c</fullName>
    <label>Q2 State</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>