force-app/main/default/objects/Accounting_Process__c/fields/Q3_Federal__c.field-meta.xml
<CustomField>
    <fullName>Q3_Federal__c</fullName>
    <label>Q3 Federal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>