force-app/main/default/objects/Accounting_Process__c/fields/Q3_State__c.field-meta.xml
<CustomField>
    <fullName>Q3_State__c</fullName>
    <label>Q3 State</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>