force-app/main/default/objects/Accounting_Process__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2012 Q1</fullName>
            </value>
            <value>
                <fullName>2012 Q2</fullName>
            </value>
            <value>
                <fullName>2012 Q3</fullName>
            </value>
            <value>
                <fullName>2012 Q4</fullName>
            </value>
            <value>
                <fullName>2013 Q1</fullName>
            </value>
            <value>
                <fullName>2013 Q2</fullName>
            </value>
            <value>
                <fullName>2013 Q3</fullName>
            </value>
            <value>
                <fullName>2013 Q4</fullName>
            </value>
            <value>
                <fullName>2014 Q1</fullName>
            </value>
            <value>
                <fullName>2014 Q2</fullName>
            </value>
            <value>
                <fullName>2014 Q3</fullName>
            </value>
            <value>
                <fullName>2014 Q4</fullName>
            </value>
            <value>
                <fullName>2015 Q1</fullName>
            </value>
            <value>
                <fullName>2015 Q2</fullName>
            </value>
            <value>
                <fullName>2015 Q3</fullName>
            </value>
            <value>
                <fullName>2015 Q4</fullName>
            </value>
            <value>
                <fullName>2016 Q1</fullName>
            </value>
            <value>
                <fullName>2016 Q2</fullName>
            </value>
            <value>
                <fullName>2016 Q3</fullName>
            </value>
            <value>
                <fullName>2016 Q4</fullName>
            </value>
            <value>
                <fullName>2017 Q1</fullName>
            </value>
            <value>
                <fullName>2017 Q2</fullName>
            </value>
            <value>
                <fullName>2017 Q3</fullName>
            </value>
            <value>
                <fullName>2017 Q4</fullName>
            </value>
            <value>
                <fullName>2018 Q1</fullName>
            </value>
            <value>
                <fullName>2018 Q2</fullName>
            </value>
            <value>
                <fullName>2018 Q3</fullName>
            </value>
            <value>
                <fullName>2018 Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>