force-app/main/default/objects/Accounting_Process__c/fields/Retirement_Contributions_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Contributions_Distributions__c</fullName>
    <label>Retirement Contributions /Distributions?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>