force-app/main/default/objects/Accounting_Process__c/fields/Review_sent_by__c.field-meta.xml
<CustomField>
    <fullName>Review_sent_by__c</fullName>
    <label>Review sent by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>