force-app/main/default/objects/Accounting_Process__c/fields/Review_To_Be_Posted_hrs__c.field-meta.xml
<CustomField>
    <fullName>Review_To_Be_Posted_hrs__c</fullName>
    <formula>((Sent_to_To_Be_Posted__c-Sent_to_Review__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review - To Be Posted</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>