force-app/main/default/objects/Accounting_Process__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>