force-app/main/default/objects/Accounting_Process__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes4</relationshipName>
    <type>Lookup</type>
</CustomField>