force-app/main/default/objects/Accounting_Process__c/fields/Sales_and_Use_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_and_Use_Tax_Status__c</fullName>
    <label>Sales and Use Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Complete / Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>