force-app/main/default/objects/Accounting_Process__c/fields/Sales_Filing_Web_Link__c.field-meta.xml
<CustomField>
    <fullName>Sales_Filing_Web_Link__c</fullName>
    <label>Sales Filing Web Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>