force-app/main/default/objects/Accounting_Process__c/fields/Sales_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_ID__c</fullName>
    <label>Sales Tax ID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>