force-app/main/default/objects/Accounting_Process__c/fields/Sent_to_Additional_Info_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Additional_Info_Request_Sent__c</fullName>
    <label>Sent to Additional Info Request Sent</label>
    <type>DateTime</type>
</CustomField>