force-app/main/default/objects/Accounting_Process__c/fields/Sent_to_Awaiting_Client_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Awaiting_Client_Approval__c</fullName>
    <label>Sent to Awaiting Client Approval</label>
    <type>DateTime</type>
</CustomField>