force-app/main/default/objects/Accounting_Process__c/fields/Sent_to_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Completed__c</fullName>
    <label>Sent to Completed</label>
    <type>DateTime</type>
</CustomField>