force-app/main/default/objects/Accounting_Process__c/fields/Sent_to_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Preparation__c</fullName>
    <label>Sent to Preparation</label>
    <type>DateTime</type>
</CustomField>