force-app/main/default/objects/Accounting_Process__c/fields/Sent_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Review__c</fullName>
    <label>Sent to Review</label>
    <type>DateTime</type>
</CustomField>