force-app/main/default/objects/Accounting_Process__c/fields/Sent_to_To_Be_Posted__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_To_Be_Posted__c</fullName>
    <label>Sent to To Be Posted</label>
    <type>DateTime</type>
</CustomField>