force-app/main/default/objects/Accounting_Process__c/fields/Setup_documents_received__c.field-meta.xml
<CustomField>
    <fullName>Setup_documents_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bookkeeping documents received</label>
    <type>Checkbox</type>
</CustomField>