force-app/main/default/objects/Accounting_Process__c/fields/Small_Business_Account_BOA__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_Account_BOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>- Small Business Account (BOA)</label>
    <type>Checkbox</type>
</CustomField>