force-app/main/default/objects/Accounting_Process__c/fields/SmartVault_Folder__c.field-meta.xml
<CustomField>
    <fullName>SmartVault_Folder__c</fullName>
    <description>Folder on SmartVault for this AccountingProcess files</description>
    <label>SmartVault Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>