force-app/main/default/objects/Accounting_Process__c/fields/Software_currently_used__c.field-meta.xml
<CustomField>
    <fullName>Software_currently_used__c</fullName>
    <label>Software Currently Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quickbooks Desktop</fullName>
            </value>
            <value>
                <fullName>Quickbooks Online</fullName>
            </value>
            <value>
                <fullName>Client Books</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>