force-app/main/default/objects/Accounting_Process__c/fields/Start_Date_of_Bookkeeping__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Bookkeeping__c</fullName>
    <label>Start Date of Bookkeeping</label>
    <type>Date</type>
</CustomField>