force-app/main/default/objects/Accounting_Process__c/fields/state_address__c.field-meta.xml
<CustomField>
    <fullName>state_address__c</fullName>
    <formula>Contact__r.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State (Address)</label>
    <type>Text</type>
</CustomField>