force-app/main/default/objects/Accounting_Process__c/fields/State_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Formation__c</fullName>
    <formula>TEXT(Account__r.State_of_Formation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State of Formation</label>
    <type>Text</type>
</CustomField>