force-app/main/default/objects/Accounting_Process__c/fields/Status_Date_Changed_est_tax__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Changed_est_tax__c</fullName>
    <label>Status Date Changed (est tax)</label>
    <type>Date</type>
</CustomField>