force-app/main/default/objects/Accounting_Process__c/fields/Status_Percent__c.field-meta.xml
<CustomField>
    <fullName>Status_Percent__c</fullName>
    <label>Status Percent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>55%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>