force-app/main/default/objects/Accounting_Process__c/fields/STF_Status__c.field-meta.xml
<CustomField>
    <fullName>STF_Status__c</fullName>
    <label>STF Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New- Email Sent</fullName>
            </value>
            <value>
                <fullName>Emailed - Second Attempt</fullName>
            </value>
            <value>
                <fullName>Called - Left VM</fullName>
            </value>
            <value>
                <fullName>Called - No Return Needed</fullName>
            </value>
            <value>
                <fullName>Called - Needs Return</fullName>
            </value>
            <value>
                <fullName>Return - In Process</fullName>
            </value>
            <value>
                <fullName>Return - Issues</fullName>
            </value>
            <value>
                <fullName>Return - Complete</fullName>
            </value>
            <value>
                <fullName>Closed - No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>