force-app/main/default/objects/Accounting_Process__c/fields/submitted_prior_to_deadline__c.field-meta.xml
<CustomField>
    <fullName>submitted_prior_to_deadline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted Prior to Deadline</label>
    <type>Checkbox</type>
</CustomField>