force-app/main/default/objects/Accounting_Process__c/fields/Submitted_Prior_to_Deadline_Apr_2018_P__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Prior_to_Deadline_Apr_2018_P__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted Prior to Deadline- Apr 2018(P)</label>
    <type>Checkbox</type>
</CustomField>