force-app/main/default/objects/Accounting_Process__c/fields/Submitted_Prior_to_Deadline_Mar_2017__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Prior_to_Deadline_Mar_2017__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted Prior to Deadline - Mar 2017</label>
    <type>Checkbox</type>
</CustomField>