force-app/main/default/objects/Accounting_Process__c/fields/Submitted_to_Review_at__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Review_at__c</fullName>
    <label>Submitted to Review at</label>
    <type>DateTime</type>
</CustomField>