force-app/main/default/objects/Accounting_Process__c/fields/Taking_Social_Security_Payments_this_yr__c.field-meta.xml
<CustomField>
    <fullName>Taking_Social_Security_Payments_this_yr__c</fullName>
    <label>Taking Social Security Payments this yr?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>