force-app/main/default/objects/Accounting_Process__c/fields/Tax_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Tax_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes3</relationshipName>
    <type>Lookup</type>
</CustomField>