force-app/main/default/objects/Accounting_Process__c/fields/Tax_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Information_Status__c</fullName>
    <label>Tax Information Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>