force-app/main/default/objects/Accounting_Process__c/fields/Tax_Prep_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Prep_Status__c</fullName>
    <label>Tax Prep Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Prep Comp Review</fullName>
            </value>
            <value>
                <fullName>Awaiting Auto-Flow</fullName>
            </value>
            <value>
                <fullName>Auto-Flowed Missing Documents</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Preparation - Data Entered</fullName>
            </value>
            <value>
                <fullName>Additional info Request Sent</fullName>
            </value>
            <value>
                <fullName>Additional info Request Sent - No Notification</fullName>
            </value>
            <value>
                <fullName>Additional Info Received</fullName>
            </value>
            <value>
                <fullName>Awaiting Internal Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Review - No Client Notification</fullName>
            </value>
            <value>
                <fullName>Review - Owes</fullName>
            </value>
            <value>
                <fullName>Review- In Progress</fullName>
            </value>
            <value>
                <fullName>Corrections Needed</fullName>
            </value>
            <value>
                <fullName>Corrections Addressed</fullName>
            </value>
            <value>
                <fullName>To Be Posted</fullName>
            </value>
            <value>
                <fullName>To Be Posted - Owes</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Approval - Owes</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Approval - No Notification</fullName>
            </value>
            <value>
                <fullName>Internal Completed - Govt forms unavailable</fullName>
            </value>
            <value>
                <fullName>E-Filed Awaiting Govt. Acceptance</fullName>
            </value>
            <value>
                <fullName>Rejections</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed - Paper Filed</fullName>
            </value>
            <value>
                <fullName>E-File Complete - State Paper Filed</fullName>
            </value>
            <value>
                <fullName>Extension Filed - Awaiting Client Info</fullName>
            </value>
            <value>
                <fullName>Long-Term Pending</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>