force-app/main/default/objects/Accounting_Process__c/fields/Tax_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>Tax_Software_Used__c</fullName>
    <label>TAX SOFTWARE USED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lacerte</fullName>
            </value>
            <value>
                <fullName>CCH Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>