force-app/main/default/objects/Accounting_Process__c/fields/Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete__c</fullName>
    <formula>DATEVALUE(Completed_Time__c) -  DATEVALUE( VTO_Submitted_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>