force-app/main/default/objects/Accounting_Process__c/fields/To_Be_Posted_Awaiting_client_approval__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Posted_Awaiting_client_approval__c</fullName>
    <formula>(( Sent_to_Awaiting_Client_Approval__c - Sent_to_To_Be_Posted__c )*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Be Posted - Awaiting client approval</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>