force-app/main/default/objects/Accounting_Process__c/fields/To_be_posted_Completed__c.field-meta.xml
<CustomField>
    <fullName>To_be_posted_Completed__c</fullName>
    <formula>((Sent_to_Completed__c-Sent_to_To_Be_Posted__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To be posted - Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>