force-app/main/default/objects/Accounting_Process__c/fields/To_Be_Posted_sent_by__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Posted_sent_by__c</fullName>
    <label>To Be Posted sent by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>