force-app/main/default/objects/Accounting_Process__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type/category of Accounting Process</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1099 Prep</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Estimated Taxes</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Notices</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Use Tax</fullName>
            </value>
            <value>
                <fullName>STF</fullName>
            </value>
            <value>
                <fullName>Tax Plan</fullName>
            </value>
            <value>
                <fullName>Tax Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>