force-app/main/default/objects/Accounting_Process__c/fields/Unique_Count__c.field-meta.xml
<CustomField>
    <fullName>Unique_Count__c</fullName>
    <formula>Contact__r.Account.Account_Unique_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>