force-app/main/default/objects/Accounting_Process__c/fields/VTO_Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VTO_Completion_Percentage__c</fullName>
    <label>VTO Completion Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>