force-app/main/default/objects/Accounting_Process__c/fields/VTO_in_Client_Books_Admin_app__c.field-meta.xml
<CustomField>
    <fullName>VTO_in_Client_Books_Admin_app__c</fullName>
    <description>use this link to find VTO via Client Books Admin app</description>
    <label>VTO in Client Books Admin app</label>
    <type>Url</type>
</CustomField>