force-app/main/default/objects/Accounting_Process__c/fields/VTO_received__c.field-meta.xml
<CustomField>
    <fullName>VTO_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VTO received</label>
    <type>Checkbox</type>
</CustomField>