force-app/main/default/objects/Accounting_Process__c/fields/VTO_Submitted_Completed__c.field-meta.xml
<CustomField>
    <fullName>VTO_Submitted_Completed__c</fullName>
    <formula>((Sent_to_Completed__c-VTO_Submitted_Time__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VTO Submitted - Completed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>