force-app/main/default/objects/Accounting_Process__c/fields/VTO_submitted_Day__c.field-meta.xml
<CustomField>
    <fullName>VTO_submitted_Day__c</fullName>
    <formula>(DATETIMEVALUE(VTO_Submitted_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VTO submitted Day</label>
    <type>Date</type>
</CustomField>